--- a/HTML ir CSS/03 paskaita - 12.11 - CSS Įvadas/stiliai.css
+++ b/HTML ir CSS/03 paskaita - 12.11 - CSS Įvadas/stiliai.css
@@ -16,3 +16,17 @@ h2{
   font-size: 24px;
   text-decoration: underline;
 } */
+
+.testKlase{
+  text-decoration: line-through;
+}
+.fonoSpalva{
+  background-color: #a6b9d3;
+}
+
+#testID{
+  border: 3px solid black;
+}
+#didziulisTekstas{
+  font-size: 50px;
+}
