--- a/HTML ir CSS/03 paskaita - 12.11 - CSS Įvadas/stiliai.css
+++ b/HTML ir CSS/03 paskaita - 12.11 - CSS Įvadas/stiliai.css
@@ -30,3 +30,23 @@ h2{
 #didziulisTekstas{
   font-size: 50px;
 }
+
+.bendraDisplayKlase{
+  border: 2px solid black;
+  background-color: #a6b9d3;
+  width: 300px;
+  height: 100px;
+}
+.inline{
+  display: inline;
+}
+.block{
+  display: block;
+  text-align: center;
+  line-height: 100px;
+}
+.inlineBlock{
+  display: inline-block;
+  text-align: center;
+  line-height: 100px;
+}
