--- a/HTML ir CSS/05 paskaita - 12.13 - Box Model ir Positions/main.css
+++ b/HTML ir CSS/05 paskaita - 12.13 - Box Model ir Positions/main.css
@@ -24,3 +24,57 @@
   border-right-width: 3px; */
   border-radius: 10px;
 }
+
+/* Positions */
+.positionsContainer{
+  width: 800px;
+  height: 300px;
+  border: 1px solid black;
+}
+.kvadratas{
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: 5px dashed orange;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  line-height: 100px;
+}
+
+.static{
+  position: static;
+}
+.relative{
+  position: relative;
+}
+.absolute{
+  position: absolute;
+}
+.fixed{
+  position: fixed;
+}
+.sticky{
+  position: sticky;
+}
+
+.top{
+  top: 20px;
+}
+.right{
+  right: 50px;
+}
+.bottom{
+  bottom: 10px;
+}
+.left{
+  left: 100px;
+}
+
+.z5{
+  z-index: 5;
+}
+.z10{
+  z-index: 10;
+}
