06 paskaita - Attribute Selectors

--- a/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/main.css
+++ b/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/main.css
@@ -28,3 +28,12 @@ caption{
 }
 .thirdToFifthCol{}
 .sixthCol{}
+
+[colspan='5']{
+  background-color: aqua;
+  font-weight: bold;
+  color: red;
+}
+
+.kazkokiaKlase{}
+[class="kazkokiaKlase"]{}
