06 paskaita - Pseudo Class

--- a/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/main.css
+++ b/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/main.css
@@ -64,3 +64,9 @@ p:only-child{
 p:only-of-type{
   background-color: brown;
 }
+
+/* .sarasas > li:nth-child(5){ */
+/* .sarasas > li:nth-child(2n){ */
+.sarasas > li:nth-child(2n+5){
+  background-color: #689ed5;
+}
