--- a/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/main.css
+++ b/HTML ir CSS/06 paskaita - 12.16 - Table ir Pseudo Klasės/main.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
 table{
   border: 1px solid black;
   border-collapse: collapse;
@@ -69,4 +71,10 @@ p:only-of-type{
 /* .sarasas > li:nth-child(2n){ */
 .sarasas > li:nth-child(2n+5){
   background-color: #689ed5;
+}
+
+.ikona{
+  font-size: 30px;
+  color: red;
+  background-color: #000;
 }
