--- a/HTML ir CSS/07 paskaita - 12.17 - Formos ir Pseudo Elementai/main.css
+++ b/HTML ir CSS/07 paskaita - 12.17 - Formos ir Pseudo Elementai/main.css
@@ -1,3 +1,25 @@
 body{
   height: 1000vh;
 }
+
+
+.customInput{
+  display: inline-block;
+  padding: 10px;
+  border: 3px solid black;
+  background-color: aliceblue;
+}
+.customInput > input{
+  display: none;
+}
+
+.customInput > label{
+  padding: 3px 5px;
+  border: 3px solid blue;
+  background-color: grey;
+}
+
+.customInput > input:checked + label{
+  background-color: green;
+  border: 3px inset black;
+}
