--- a/HTML ir CSS/07 paskaita - 12.17 - Formos ir Pseudo Elementai/main.css
+++ b/HTML ir CSS/07 paskaita - 12.17 - Formos ir Pseudo Elementai/main.css
@@ -68,3 +68,29 @@ li::selection{
 ::-webkit-scrollbar-track{
   background-color: black;
 }
+
+.ND_table th:hover,
+.ND_table td:hover{
+  background-color: aquamarine;
+}
+
+.ND_table tr:hover{
+  background-color: chocolate;
+}
+
+.ND_table td:hover::before{
+  content: "";
+  width: 100%;
+  height: 10000px;
+  top: -5000px;
+  background-color: #b80b7c;
+  position: absolute;
+  z-index: -1;
+}
+
+.ND_table td{
+  position: relative;
+}
+.ND_table{
+  overflow: hidden;
+}
