--- a/HTML ir CSS/09 paskaita - 12.19 - Display Grid/main.css
+++ b/HTML ir CSS/09 paskaita - 12.19 - Display Grid/main.css
@@ -10,8 +10,17 @@ body{
   border: 3px dashed black;
 
   display: grid;
+  /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr; */
+  /* grid-template-columns: repeat(8, 1fr); */
+  /* grid-template-columns: 1fr 100px 1fr 100px 1fr 100px 1fr 100px; */
+  /* grid-template-columns: repeat(4, 1fr 100px); */
   grid-template-columns: 1fr 2fr 2fr 3fr 1fr;
   grid-template-rows: 25% 2fr 3fr 100px;
+  /* grid-template-columns: 100px 200px 200px 50px 100px;
+  grid-auto-rows: 100px; */
+  gap: 5px;
+  /* place-items: center; */
+  grid-auto-flow: column;
 }
 
 .gridContainerPvz > div{
@@ -20,6 +29,8 @@ body{
   font-size: 24px;
   /* width: 100px;
   height: 100px; */
+  display: grid;
+  place-items: center;
 }
 
 .gridContainerPvz > div:nth-child(1){
@@ -54,4 +65,10 @@ body{
 }
 .gridContainerPvz > div:nth-child(8){
   grid-area: 3 / 4 / 5 / 5;
+}
+
+.gridStyles{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  /* grid-auto-flow: column; */
 }
