--- a/HTML ir CSS/09 paskaita - 12.19 - Display Grid/main.css
+++ b/HTML ir CSS/09 paskaita - 12.19 - Display Grid/main.css
@@ -72,3 +72,26 @@ body{
   grid-template-columns: 1fr 1fr 1fr;
   /* grid-auto-flow: column; */
 }
+
+#cards{
+  /* box-sizing: border-box; */
+  width: calc(100% - 40px);
+  padding: 0 20px;
+  
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 500px;
+}
+#cards > h2{
+  grid-column: span 3;
+  text-align: center;
+}
+
+.flexCard{
+  display: flex;
+  flex-direction: column;
+  /* height: 500px; */
+}
+.flexCard > img{
+  width: 100%;
+}
