--- a/HTML ir CSS/12 paskaita - 12.27 - Tranzicija ir Animacija/main.css
+++ b/HTML ir CSS/12 paskaita - 12.27 - Tranzicija ir Animacija/main.css
@@ -1,3 +1,7 @@
+body{
+  height: 500vh;
+}
+
 .transformTest{
   height: 300px;
   border: 1px dashed black;
@@ -35,4 +39,30 @@
 }
 .transformTest > div:nth-child(5){
   transform: scale(0.5) translate(-50px, 100px);
+}
+
+.transitionTest{
+  width: 300px;
+  height: 100px;
+  border: 3px solid black;
+  background-color: #00ffff;
+  color: red;
+  font-weight: bold;
+  font-size: 32px;
+
+  /* transition-duration: 3s;
+  transition-timing-function: linear;
+  transition-delay: 0s;
+  transition-property: width; */
+
+  transition:
+    3s linear 0s width,
+    5s linear 2s background-color;
+}
+
+.transitionTest:hover{
+  width: 500px;
+  background-color: orange;
+  color: black;
+  font-size: 50px;
 }
