--- a/HTML ir CSS/12 paskaita - 12.27 - Tranzicija ir Animacija/main.css
+++ b/HTML ir CSS/12 paskaita - 12.27 - Tranzicija ir Animacija/main.css
@@ -66,3 +66,45 @@ body{
   color: black;
   font-size: 50px;
 }
+
+.animationContainer{
+  height: 100vh;
+  border: 1px solid black;
+}
+
+.animationContainer > div:nth-child(1){
+  width: 100px;
+  height: 100px;
+  border: 2px solid black;
+  background-color: azure;
+  color: blue;
+  font-size: 20px;
+  font-weight: bold;
+
+  display: grid;
+  place-items: center;
+
+  animation: 5s infinite linear bandymas;
+}
+
+@keyframes bandymas {
+  0% {
+    transform: translate(100px, 100px);
+  } 30% {
+    transform: translate(150px, 300px);
+    background-color: #ff0;
+    border-radius: 50%;
+  } 50% {
+    transform: translate(500px, 350px);
+    color: black;
+    background-color: #ff0;
+    border-radius: 50%;
+  } 80% {
+    transform: translate(500px, 100px);
+    background-color: #ff00d4;
+    color: black;
+    border-radius: 50%;
+  } 100% {
+    transform: translate(100px, 100px);
+  }
+}
