13 paskaita - Units and Accessibility

--- a/HTML ir CSS/13 paskaita - 12.30 - Likusios temos/main.css
+++ b/HTML ir CSS/13 paskaita - 12.30 - Likusios temos/main.css
@@ -1,4 +1,7 @@
 :root{
+  /* šakniniai nustatymai */
+  /* font-size: 16px; */
+
   /* kintamųjų kūrimas */
   --kintamojoVardas: 10px;
   --flex-grid-gap-small: 5px;
